--- a/eCommerce/Views/Cart/Index.cshtml
+++ b/eCommerce/Views/Cart/Index.cshtml
@@ -6,4 +6,4 @@
 
 <h2>Cart</h2>
 
-@Html.DisplayNameFor(model => model.Name) | <a href ="@Url.Action("Remove","Cart")">Remove</a>
+<a href ="@Url.Action("Remove","Cart")">Remove</a>
