--- a/eCommerce/Views/Shared/_Layout.cshtml
+++ b/eCommerce/Views/Shared/_Layout.cshtml
@@ -20,14 +20,20 @@
                     </section>
 
                     @*Display the user's cart*@
+                    <div class="MiniCart">
                     @Html.Action("MiniCart", "Cart")
-            
+                    @using (Html.BeginForm("Search","Shop", FormMethod.Post))
+                    {
+                        <div class="searchBar">
+                        <input type="text" name="search" placeholder="Search Items...."/>
+                        <input type="submit" value="Go" />
+                        </div>
+                    }
+                    </div>
+
                     <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
+                        @*Make a call to display navigation*@
+                        @Html.Action("Navigation", "Home")
                         @*if the user is logged in and an admin, show links to the admin section*@
                         @if (Request.IsAuthenticated && User.IsInRole("admin"))
                         {
@@ -62,6 +68,8 @@
                     </nav>
                 </div>
             </div>
+           
+
         </header>
         <div id="body">
             @RenderSection("featured", required: false)
